--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -31,17 +31,16 @@
     %h2.new_item_title レディース新着アイテム
     %li.more_item
       =link_to "もっと見る >" , "#"
-  - if @ladys.present?
-    .new_list
-      %ul.new_list_item
-        - @ladys.each do |lady|
-          %li.item
-            =link_to product_path(lady.id) ,class: "new_item" do
-              .item_text 
-                =lady.name
-              = image_tag lady.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(lady.price)
+  .new_list
+    %ul.new_list_item
+      - @ladys.each do |lady|
+        %li.item
+          =link_to product_path(lady.id) ,class: "new_item" do
+            .item_text 
+              =lady.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(lady.price)
 
  
 
@@ -51,17 +50,16 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @mens.present?
-    .new_list
-      %ul.new_list_item
-        - @mens.each do |men|
-          %li.item
-            =link_to product_path(men.id) ,class: "new_item" do
-              .item_text 
-                =men.name
-              = image_tag men.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(men.price)
+  .new_list
+    %ul.new_list_item
+      - @mens.each do |men|
+        %li.item
+          =link_to product_path(men.id) ,class: "new_item" do
+            .item_text 
+              =men.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(men.price)
 
 
  
@@ -72,17 +70,16 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @appliances.present?
-    .new_list
-      %ul.new_list_item
-        - @appliances.each do |appliance|
-          %li.item
-            =link_to product_path(appliance.id) ,class: "new_item" do
-              .item_text 
-                =appliance.name
-              = image_tag appliance.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(appliance.price)
+  .new_list
+    %ul.new_list_item
+      - @appliances.each do |appliance|
+        %li.item
+          =link_to product_path(appliance.id) ,class: "new_item" do
+            .item_text 
+              =appliance.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(appliance.price)
 
 
  
@@ -93,17 +90,16 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @toys.present?
-    .new_list
-      %ul.new_list_item
-        - @toys.each do |toy|
-          %li.item
-            =link_to product_path(toy.id) ,class: "new_item" do
-              .item_text 
-                =toy.name
-              = image_tag toy.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(toy.price)
+  .new_list
+    %ul.new_list_item
+      - @toys.each do |toy|
+        %li.item
+          =link_to product_path(toy.id) ,class: "new_item" do
+            .item_text 
+              =toy.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(toy.price)
 
 
 
@@ -123,17 +119,16 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @channels.present?
-    .new_list
-      %ul.new_list_item
-        - @chanels.each do |chanel|
-          %li.item
-            =link_to product_path(chanel.id) ,class: "new_item" do
-              .item_text 
-                =chanel.name
-              = image_tag chanel.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(chanel.price)
+  .new_list
+    %ul.new_list_item
+      - @chanels.each do |chanel|
+        %li.item
+          =link_to product_path(chanel.id) ,class: "new_item" do
+            .item_text 
+              =chanel.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(chanel.price)
 
  
 
@@ -143,17 +138,16 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @coachs.present?
-    .new_list
-      %ul.new_list_item
-        - @coachs.each do |coach|
-          %li.item
-            =link_to product_path(coach.id) ,class: "new_item" do
-              .item_text 
-                =coach.name
-              = image_tag coach.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(coach.price)
+  .new_list
+    %ul.new_list_item
+      - @coachs.each do |coach|
+        %li.item
+          =link_to product_path(coach.id) ,class: "new_item" do
+            .item_text 
+              =coach.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(coach.price)
 
  
 
@@ -163,17 +157,16 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @louisvuittons.present?
-    .new_list
-      %ul.new_list_item
-        - @louisvuittons.each do |louisvuitton|
-          %li.item
-            =link_to product_path(louisvuitton.id) ,class: "new_item" do
-              .item_text 
-                =louisvuitton.name
-              = image_tag louisvuitton.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(louisvuitton.price)
+  .new_list
+    %ul.new_list_item
+      - @louisvuittons.each do |louisvuitton|
+        %li.item
+          =link_to product_path(louisvuitton.id) ,class: "new_item" do
+            .item_text 
+              =louisvuitton.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(louisvuitton.price)
 
 
  
@@ -184,17 +177,16 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @guccis.present?
-    .new_list
-      %ul.new_list_item
-        - @guccis.each do |gucci|
-          %li.item
-            =link_to product_path(gucci.id) ,class: "new_item" do
-              .item_text 
-                =gucci.name
-              = image_tag gucci.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-              %span{href:  "#",class: "price",id:"text_price"} 
-                =price_split(gucci.price)
+  .new_list
+    %ul.new_list_item
+      - @guccis.each do |gucci|
+        %li.item
+          =link_to product_path(gucci.id) ,class: "new_item" do
+            .item_text 
+              =gucci.name
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{href:  "#",class: "price",id:"text_price"} 
+              =price_split(gucci.price)
 
 
 
@@ -203,7 +195,11 @@
 
 = render partial: 'footer'
 
-
+.producte
+  = link_to new_product_path do
+    .producte_now
+      .producte_text 出品
+      = icon('fas', 'camera', class: 'camera')
 
 
 
