Update scss files

--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -334,6 +334,24 @@
           }
         }
       }
+      .user-card-info {
+        background-color: #fff;
+        height: 100%;
+        padding-bottom: 50px;
+      }
+      .red-btn {
+        margin: 24px 0 0;
+        background: #ea352d;
+        border: 1px solid #ea352d;
+        color: #fff;
+        display: block;
+        width: 100%;
+        line-height: 48px;
+        font-size: 14px;
+        transition: all ease-out .3s;
+        cursor: pointer;
+        text-align: center;
+      }
     }
   }
   a{
