--- a/app/assets/stylesheets/users/_def.scss
+++ b/app/assets/stylesheets/users/_def.scss
@@ -26,6 +26,19 @@
       margin-right: 16px;
     }
   }
+  .card-registration {
+    margin: 24px 0 0;
+    background: #ea352d;
+    border: 1px solid #ea352d;
+    color: #fff;
+    display: block;
+    width: 100%;
+    line-height: 48px;
+    font-size: 14px;
+    transition: all ease-out .3s;
+    cursor: pointer;
+    text-align: center;
+  }
   .explaination{
     &__help{
       border-top: 1px solid #eeeeee;
