--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,39 +1,68 @@
-= form_tag(pay_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
-  %label カード番号
-  = text_field_tag "number", "", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
-  %br
-  %label 有効期限
-  %select#exp_month{name: "exp_month", type: "text"}
-    %option{value: ""} --
-    %option{value: "1"}01
-    %option{value: "2"}02
-    %option{value: "3"}03
-    %option{value: "4"}04
-    %option{value: "5"}05
-    %option{value: "6"}06
-    %option{value: "7"}07
-    %option{value: "8"}08
-    %option{value: "9"}09
-    %option{value: "10"}10
-    %option{value: "11"}11
-    %option{value: "12"}12
-  %span 月/
-  %select#exp_year{name: "exp_year", type: "text"}
-    %option{value: ""} --
-    %option{value: "2019"}19
-    %option{value: "2020"}20
-    %option{value: "2021"}21
-    %option{value: "2022"}22
-    %option{value: "2023"}23
-    %option{value: "2024"}24
-    %option{value: "2025"}25
-    %option{value: "2026"}26
-    %option{value: "2027"}27
-    %option{value: "2028"}28
-    %option{value: "2029"}29
-  %span 年
-  %br
-  %label セキュリティコード
-  = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc"
-  #card_token
-  = submit_tag "追加する", id: "token_submit"
+.wrapper
+  = render partial: '/products/header'
+  = render partial: '/users/bread', locals: { where: :new_card }
+  .main
+    .main__wrapper
+      = render partial: '/users/sidebar'
+                    
+      .main__wrapper__right.user-card-info
+        .card_registration_wrapper__main__container__top
+          クレジットカード情報入力
+        = form_tag(pay_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
+          .card_registration_wrapper__main__container__middle
+            .card_registration_wrapper__main__container__middle__number
+              %span.card_registration_wrapper__main__container__middle__number__left
+                カード番号
+              %span.card_registration_wrapper__main__container__middle__number__right
+                必須
+              = text_field_tag "number", "", class: "number card_registration_wrapper__main__container__middle__number__under", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
+            %img{alt: "カード", height: "35", src: "http://manual.estore.co.jp/shared/mg_sozai/card_m_all.gif", width: "80%",class: "card_registration_img"}
+            .card_registration_wrapper__main__container__middle__expiration_1
+              %span.card_registration_wrapper__main__container__middle__expiration_1__left
+                有効期限
+              %span.card_registration_wrapper__main__container__middle__expiration_1__right
+                必須
+            .card_registration_wrapper__main__container__middle__expiration_2
+              %i.fa.fa-chevron-down{class: "card_registration_chevron1"}
+              %i.fa.fa-chevron-down{class: "card_registration_chevron2"}
+              %select#exp_month{name: "exp_month", type: "text", class: "card_registration_wrapper__main__container__middle__expiration_2__mon"}
+                %option{value: ""} --
+                %option{value: "1"}01
+                %option{value: "2"}02
+                %option{value: "3"}03
+                %option{value: "4"}04
+                %option{value: "5"}05
+                %option{value: "6"}06
+                %option{value: "7"}07
+                %option{value: "8"}08
+                %option{value: "9"}09
+                %option{value: "10"}10
+                %option{value: "11"}11
+                %option{value: "12"}12
+              %span.card_registration_wrapper__main__container__middle__expiration_2__j
+                月
+              %select#exp_year{name: "exp_year", type: "text", class: "card_registration_wrapper__main__container__middle__expiration_2__year"}
+                %option{value: ""} --
+                %option{value: "2020"}20
+                %option{value: "2021"}21
+                %option{value: "2022"}22
+                %option{value: "2023"}23
+              %span.card_registration_wrapper__main__container__middle__expiration_2__j
+                年
+            .card_registration_wrapper__main__container__middle__safty
+              %span.card_registration_wrapper__main__container__middle__safty__left
+                セキュリティーコード
+              %span.card_registration_wrapper__main__container__middle__safty__right
+                必須
+              = text_field_tag "cvc", "", class: "cvc card_registration_wrapper__main__container__middle__safty__number", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc"
+              #card_token
+            .card_awesome
+              %i.fa.fa-question-circle
+              %span.card_registration_wrapper__main__container__middle__link
+                カード裏面の番号とは
+            .form__card_btn
+              = submit_tag "カードを追加する", class: "red-btn ", id: "token_submit"
+
+.footer
+  = render partial: '/products/adbtm'
+  = render partial: '/products/footer'
