--- a/app/views/users/card.html.haml
+++ b/app/views/users/card.html.haml
@@ -4,7 +4,38 @@
   = render partial: '/users/bread', locals: { where: :card }
   .card_container
     = render partial: '/users/sidebar'
-    = render partial: 'show_card'
+    - if current_user.card.present?
+      .card
+        %h2 支払い方法
+        .card__content
+          .card__content__list
+            %h3 クレジットカード一覧
+            = form_with url: delete_cards_path, method: :post, class: 'card-form' do |f|
+              = icon('fab', 'cc-visa')
+              .card__number
+                ********1234
+              .card__date
+                02/20
+              = f.submit value: '削除する', class: 'delete_btn'
+          .explaination
+            .explaination__help
+              = link_to '#', class: 'help' do
+                .explaination__help__text
+                  支払い方法について
+                  = icon('fas', 'chevron-right')
+    - else
+      .card
+        %h2 支払い方法
+        .card__content
+          .card__content__list
+            %h3 クレジットカード一覧
+            = link_to "クレジットカードを追加する", new_card_path, class: "card-registration"
+          .explaination
+            .explaination__help
+              = link_to '#', class: 'help' do
+                .explaination__help__text
+                  支払い方法について
+                  = icon('fas', 'chevron-right')
 .footer
   = render partial: '/products/adbtm'
   = render partial: '/products/footer'
