--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -5,13 +5,14 @@
     border-top: 1px solid #eeeeee;
     background-color: #ffffff;
     &__top{
-      background: url('https://d1f5hsy4d47upe.cloudfront.net/1c/1c0a73e254f713c2a9f33f8f6b06fb5e_t.jpeg');
+      background: url('background.jpg');
       padding: 72px 16px 24px;
       background-size: cover;
       text-align: center;
       img{
         border-radius: 50%;
         vertical-align: middle;
+        background-color: #cccccc;
       }
       .nickname{
         border-radius: 4px;
