--- a/app/views/products/_adbtm.html.haml
+++ b/app/views/products/_adbtm.html.haml
@@ -6,7 +6,9 @@
     .footer_pic_title__log
       =link_to "#" ,class: "footer_pic_title__log__new_item" do
         = image_tag "logo_red.svg",class: "app_box", alt: "app"          
-      =link_to "#" ,class: "new_item" do
-        = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",class: "app_box", alt: "app"
-      =link_to "#" ,class: "new_item" do
-        = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",class: "app_box", alt: "app"
+      =link_to "#" ,class: "app" do
+        = image_tag "phone.png",class: "app_logo", alt: "app", size: "30x30"
+        ダウンロード！
+      =link_to "#" ,class: "app" do
+        = image_tag "phone.png",class: "app_logo", alt: "app", size: "30x30"
+        Download!
