--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,5 +18,6 @@
 @import 'products/new';
 @import 'products/index';
 @import 'products/show';
+@import 'products/edit';
 @import 'buyers/new';
 @import 'cards/show_card';
