メルカリtoモルカリ

--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -207,7 +207,7 @@
             プライバシーポリシー
         = link_to "#" do
           .exhibition_footer__inner__text__2{class: "hover"}
-            メルカリ利用規約
+            モルカリ利用規約
         = link_to "#" do
           .exhibition_footer__inner__text__3{class: "hover"}
             特定商取引に関する表記
@@ -215,4 +215,4 @@
         = link_to "/" do
           = image_tag "logo_gray.svg", size: "80x65", alt: "logo", class: "image_under"
       .exhibition_footer__inner__inc
-        © Mercari, Inc.
+        © Morukari, Inc.
