--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -25,10 +25,10 @@
         = link_to "#"do
           プライバシーポリシー
         = link_to "#"do
-          メルカリ利用規約
+          モルカリ利用規約
         = link_to "#"do
           特定商取引に関するにかんする表記
       .signup__footer__logo
         = link_to "#" do
           = image_tag "logo_gray.svg", width: "80px"
-      %p © Mercari, Inc.  
+      %p © Morukari, Inc.  
