--- a/app/views/products/_footer.html.haml
+++ b/app/views/products/_footer.html.haml
@@ -17,7 +17,7 @@
             公式ブログ
         %li.f_item
           =link_to "#",class: "f_item" do
-            メルカリロゴ利用ガイドライン
+            モルカリロゴ利用ガイドライン
             
 
     .footer_bottme_list_2
@@ -25,28 +25,28 @@
         %h4 ヘルプ＆ガイド
         %li.f_item
           =link_to "#",class: "f_item" do
-            メルカリガイド
+            モルカリガイド
         %li.f_item
           =link_to "#",class: "f_item" do
-            らくらくメルカリ便
+            らくらくモルカリ便
         %li.f_item
           =link_to "#",class: "f_item" do
-            ゆうゆうメルカリ便
+            ゆうゆうモルカリ便
         %li.f_item
           =link_to "#",class: "f_item" do
-            大型メルカリ便
+            大型モルカリ便
         %li.f_item
           =link_to "#",class: "f_item" do
             車体取引ガイド
         %li.f_item
           =link_to "#",class: "f_item" do
-            メルカリあんしん・あんぜん宣言！
+            モルカリあんしん・あんぜん宣言！
         %li.f_item
           =link_to "#",class: "f_item" do
             偽ブランド品撲滅への取り組み
         %li.f_item
           =link_to "#",class: "f_item" do
-            メルカリボックス
+            モルカリボックス
 
 
     .footer_bottme_list_3
@@ -58,7 +58,7 @@
               プライバシーポリシー
           %li.f_item
             =link_to "#",class: "p_item" do
-              メルカリ利用規約
+              モルカリ利用規約
           %li.f_item
             =link_to "#",class: "p_item" do
               あんしんスマホサポート制度に関する利用特約
