--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -5,7 +5,7 @@
     border-top: 1px solid #eeeeee;
     background-color: #ffffff;
     &__top{
-      background: url('background.jpg');
+      background-image: image-url('background.jpg');
       padding: 72px 16px 24px;
       background-size: cover;
       text-align: center;
