--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -19,6 +19,7 @@
           = link_to user_google_oauth2_omniauth_authorize_path, method: :post do
             .main__conect__lists__google__btn
               Googleで登録する
+              = icon('fab', 'google')
             .main__conect__lists__google__icon
     .signup__footer
       .signup__footer__box
