--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -177,7 +177,7 @@
         &__top{
           width: 100%;
           height: 200px;
-          background-image: url("background.jpg");
+          background-image: image-url("background.jpg");
           background-size: cover;
           &__a{
             width: 100%;
@@ -242,7 +242,6 @@
         }
         &__middle_tab{
           width: 100%;
-          // background-image: url("https://www.mercari.com/jp/assets/img/common/common/logo-gray-icon.svg?2442575");
           &__top{
             width: 100%;
             height: 75px;
@@ -273,7 +272,7 @@
             width: 100%;
             height: 236px;
             background-color: white;
-            background-image: url("logo_gray.svg");
+            background-image: image-url("logo_gray.svg");
             background-repeat: no-repeat;
             background-position: center 40px;
             background-size: 78px 85px;
@@ -325,7 +324,7 @@
             width: 100%;
             height: 236px;
             background-color: white;
-            background-image: url("logo_gray.svg");
+            background-image: image-url("logo_gray.svg");
             background-repeat: no-repeat;
             background-position: center 40px;
             background-size: 78px 85px;
