--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -65,7 +65,7 @@
                   
                   .listing-select-wrapper
                     .listing-select-wrapper__box
-                      = form.select :category_id, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
+                      = form.select :category_id, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select parent_category'}
                     
                 .exhibition_main__container__product__detail__inner__select__status#margin_select
                   %h3.exhibition_main__container__product__detail__inner__select__status__left
