--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -127,7 +127,7 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  - if @channels.present?
+  - if @chanels.present?
     .new_list
       %ul.new_list_item
         - @chanels.each do |chanel|
