--- a/app/views/users/registrations/_header.html.haml
+++ b/app/views/users/registrations/_header.html.haml
@@ -1,5 +1,5 @@
 %h1.simple-header__logo
-  = link_to "#"do 
+  = link_to "/" do 
     = image_tag "fmarket_logo_white.svg"
 %nav.progress-barfive
   %ol.clearfix
